--- a/.gitignore
+++ b/.gitignore
@@ -1,78 +1,4 @@
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# Virtual Environment
-venv/
-env/
-ENV/
-.env
-.venv
-
-# Database
-*.db
-*.sqlite3
-
-# IDE
-.idea/
-.vscode/
-*.swp
-*.swo
-*~
-
-# Environment variables
-.env
-.DS_Store
-
-# Testing
-.coverage
-htmlcov/
-.pytest_cache/
-
-# Local development
-flask_session/
-.python-version
-
-# Logs
-*.log
-
-# Local configuration
-config.py
-
-# Testing
-.coverage
-htmlcov/
-.pytest_cache/
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# Distribution / packaging
-.Python
-build/
+/flask_session
+/__pycache__
+users.db
+#.env
