--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-blinker==1.9.0
+﻿blinker==1.9.0
 cachelib==0.13.0
 click==8.1.8
 colorama==0.4.6
@@ -16,5 +16,3 @@ sqlparse==0.5.3
 termcolor==2.5.0
 typing_extensions==4.12.2
 Werkzeug==3.1.3
-pandas==2.2.2
-openpyxl==3.1.2
