--- a/requirements.txt
+++ b/requirements.txt
@@ -46,3 +46,7 @@ xlsxwriter==3.2.5
 plotly==5.24.0
 kaleido==0.2.1
 itsdangerous==2.2.0
+psycopg2-binary>=2.9.3
+alembic>=1.7.4
+Flask-SQLAlchemy>=2.5.1
+Flask-Migrate>=3.1.0
