Updated sample .env file

--- a/sample.env
+++ b/sample.env
@@ -1,2 +1,7 @@
 ENCRYPTION_KEY=SarvAuthAuthenticationKey
 OPENAI_API_KEY=OPENAIAPIKEYsadasdasdafsfsdf
+DB_NAME=chess_tournament
+DB_USER=postgres
+DB_PASSWORD=your_secure_password
+DB_HOST=localhost
+DB_PORT=5432
